# ImaqliqTestTask

./: CMakeLists.txt  README.md
include/client/: client_app.h
include/common/: connection_s.h  cont-common.h  containers.h  exception_s.h  list_s.h  rb_tree_s.h  vector_s.h
include/server/: connection_s.h  server_app.h
src/client/: client_app.c  client_app.h  main.c
src/common/connection/: connection_s.c
src/common/containers/: list_s.c  rb_tree_s.c  vector_s.c
src/common/exception/: exception_s.c
src/server/: main.c
src/server/app/: server_app.c  server_app.h
src/server/connection/: connection_s.c
